# TriangleSpring

./: .gitignore  CMakeLists.txt  ClutchOnGroundGoal.cpp  GroundForceGoal.cpp  HeadStabGoal.cpp  LeftKneeAngleGoal.cpp  LowAcelGoal.cpp  RegisterTypes_TriangleSpring.cpp  RegisterTypes_TriangleSpring.h  TipGoal.cpp  TriWorkGoal.cpp  Utils.cpp  additions.h  lnall.sh  mocorun.cpp  statRun.sh  stoheader.py  tablerun.sh
OSIM/: Bhargava2004SmoothedMuscleMetabolics.cpp  Bhargava2004SmoothedMuscleMetabolics.h  ClutchedPathSpring.cpp  ClutchedPathSpring.h  DeGrooteFregly2016Muscle.cpp  DeGrooteFregly2016Muscle.h  Marker.cpp  Marker.h  MocoTrajectory.cpp  MocoTrajectory.h  SmoothSphereHalfSpaceForce.cpp  SmoothSphereHalfSpaceForce.h  TriangleSpring.h  mypchip.h  readxy.h
src/: 2D_gaitMass.osim  cmc0.sto  cmc0cut.sto  cmcCutFixed.sto  gaitTracking3_solution0.sto  inpdata.txt  inpdata.txt.tri  itayAverage.csv  itay_average.sto  oneCont.osim  pred0_solution.sto  pred3_solution.sto  reducedOneCont.osim
